float main to make sure main does not overlap nav and flows correctly.
Main is standard display:block. This will then force it to be have a width of 100%
Chrome incorrectly changes this to be backward compatible with previous versions,
IE in edge mode does it correct but breaks backward compatibility forcing this fix..

--- a/style.css
+++ b/style.css
@@ -88,7 +88,8 @@ a {
   outline: none; }
 
 main {
-  padding-top: 12px; }
+  padding-top: 12px;
+  float:left; }
 
 a:hover {
   color: #143352; }
@@ -270,6 +271,8 @@ table.chart {
     font-size: 13px; }
 
   footer {
-    padding: 20px 20px 40px 20px; } }
+    padding: 20px 20px 40px 20px; }
+  
+}
 
 /*# sourceMappingURL=style.css.map */
